# CS163_Group2_Dictionary

./: .gitignore  App.cpp  CMakeLists.txt  HTML_Creator.h  Quiz  README.md  a.cpp  a.h  a.ui  addnewword.cpp  addnewword.h  addnewword.ui  bEdit.cpp  bEdit.h  bEdit.ui  baddnewword.ui  baddnewword.ui.autosave  cSearch.cpp  cSearch.h  dSearch.cpp  dSearch.h  dSearch.ui  deftoword.cpp  deftoword.h  deftoword.ui  editchoice.cpp  editchoice.h  editscreen.cpp  editscreen.h  editscreen.ui  editword.ui  editword.ui.autosave  favlistscreen.cpp  favlistscreen.h  favlistscreen.ui  historyscreen.cpp  historyscreen.h  historyscreen.ui  homescreen.cpp  homescreen.h  (+31 more)
.cache/clangd/index/: App.cpp.C62A492CBD4FDE93.idx  App.hpp.E30DADA14989CA22.idx  BIT.cpp.541759150B4673A8.idx  BIT.hpp.5DCBA27D2DAC8FD2.idx  BTree.cpp.8B06D89CB427D2E6.idx  BTree.hpp.6316704A2CDD0A94.idx  DefTrie.cpp.5A3696EF99D94573.idx  DefTrie.hpp.38C11743DAB6EA7E.idx  Dict.cpp.FB5AE86C6E729E75.idx  Dict.hpp.7347DBBB1C318682.idx  Dict_test.cpp.F986BA2C453C5806.idx  HashTable.cpp.7C2D8AD1D5528BF2.idx  HashTable.hpp.5DD65C606A5F524F.idx  HashTable_test.cpp.2FE9474ECA2A90FD.idx  Libraries.hpp.F868B766258D828E.idx  SLL.hpp.E375D9DE829586EA.idx  SLL.inl.4BE1C8067658ECE1.idx  SLL_test.cpp.234F1F550E63A2C9.idx  Screens.cpp.28B189EB830426EA.idx  Screens.hpp.EE3D5BF94FECFA8E.idx  SmallTrie.cpp.5618982EC8B8DFE2.idx  SmallTrie.hpp.A6CC991BB1B15802.idx  TST.cpp.AB37714499212B3E.idx  TST.hpp.87243CA1ECB26D3C.idx  TST_test.cpp.F28000E4D988D9F2.idx  Trie.cpp.0D2114756A0445C3.idx  Trie.hpp.6CA3FFC186B443CA.idx  Trie_test.cpp.4D6A4178EA5C6EA4.idx  Word.cpp.7AF26ADDD2D8B4F9.idx  Word.hpp.B90B18F213BA1497.idx  main.cpp.691532D83596A737.idx
assets/RawData/: Emoji.txt  VE.txt
images/button pastel/: 19994907.eps
include/: BIT.hpp  BTree.hpp  BplusTree.hpp  DefHash.hpp  DefTrie.hpp  Dict.hpp  HashTable.hpp  Libraries.hpp  SLL.hpp  SLL.inl  SmallTrie.hpp  TST.hpp  Trie.h  Trie.hpp  Word.hpp  test.cpp
source/: CMakeLists.txt  Libraries.hpp  main.cpp
source/App/: App.cpp  App.h  App.hpp  CMakeLists.txt
source/App/.cph/: .App.cpp_34312c9b3477fe06e49f24eb954ab730.prob
source/App/Screens/: CMakeLists.txt  Screens.cpp  Screens.hpp
source/DataStructure/: CMakeLists.txt
source/DataStructure/BIT/: BIT.cpp  CMakeLists.txt
source/DataStructure/BTree/: CMakeLists.txt
source/DataStructure/DefTrie/: CMakeLists.txt  DefTrie.cpp  DefTrie.hpp
source/DataStructure/DefTrie/SmallTrie/: CMakeLists.txt  SmallTrie.cpp  SmallTrie.hpp
source/DataStructure/FavList (TST)/: CMakeLists.txt  TST.hpp
source/DataStructure/HashTable/: CMakeLists.txt  HashTable.cpp  HashTable.hpp
source/DataStructure/SLL/: CMakeLists.txt  SLL.hpp  SLL.inl
source/DataStructure/TST/: CMakeLists.txt  TST.cpp  TST.hpp  TST.txt  tst.txt
source/DataStructure/Trie/: CMakeLists.txt  Trie.cpp  Trie.hpp  trie.txt
source/DataStructure/Word/: CMakeLists.txt  Word.cpp  Word.hpp
source/Dict/: CMakeLists.txt  Dict.cpp  Dict.hpp
source/UI/: Button.hpp  CMakeLists.txt  InputBox.hpp  Other.hpp  UI.cpp  UI.hpp
source/json/: CMakeLists.txt  filename.hpp
src/: BIT.cpp  BTree.cpp  DefHash.cpp  DefTrie.cpp  Dict.cpp  HashTable.cpp  SLL.cpp  SmallTrie.cpp  TST.cpp  Trie.cpp  Word.cpp  main.cpp
tests/: CMakeLists.txt  Dict_test.cpp  HashTable_test.cpp  SLL_test.cpp  TST_test.cpp  Trie_test.cpp  favList_test.cpp
